--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "page-ecommerce",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+	"name": "page-ecommerce",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
+		"cloudinary": "^2.2.0",
+		"feather-icons": "^4.29.2",
+		"framer-motion": "^11.2.10",
+		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.395.0",
+		"mongoose": "^8.4.1",
+		"multer": "^1.4.5-lts.1",
+		"next": "14.2.4",
+		"next-auth": "^4.24.7",
+		"next-connect": "^1.0.0",
+		"next-iron-session": "^4.2.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-number-format": "^5.4.0",
+		"swr": "^2.2.5"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
+	}
 }
