--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
 		"axios": "^1.7.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
