--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
 		"axios": "^1.7.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
+		"chart.js": "^4.4.3",
 		"class-variance-authority": "^0.7.0",
 		"cloudinary": "^2.2.0",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.11",
 		"feather-icons": "^4.29.2",
 		"framer-motion": "^11.2.10",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.395.0",
+		"midtrans-client": "^1.3.1",
 		"mongoose": "^8.4.1",
 		"multer": "^1.4.5-lts.1",
 		"next": "14.2.4",
@@ -32,7 +35,9 @@
 		"next-connect": "^1.0.0",
 		"next-iron-session": "^4.2.0",
 		"react": "^18",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18",
+		"react-icons": "^5.2.1",
 		"react-number-format": "^5.4.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.3.0",
