--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"react-intersection-observer": "^9.10.3",
 		"react-number-format": "^5.4.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.3.0",
